--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "mongodb-project",
   "version": "1.0.0",
   "scripts": {
-  "start": "dotenv -e .env.local -- sls offline start"
+    "start": "dotenv --config .env.local -- sls offline start"
   },
   "author": "fer",
   "license": "ISC",
   "dependencies": {
     "aws-lambda": "^1.0.7",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.5.3",
     "zod": "^3.23.8"
   },
@@ -15,6 +16,7 @@
     "@serverless/typescript": "^3.38.0",
     "@types/aws-lambda": "^8.10.133",
     "@types/node": "^14.18.63",
+    "dotenv-cli": "^7.4.2",
     "esbuild": "^0.14.54",
     "json-schema-to-ts": "^1.6.5",
     "serverless": "^3.38.0",
