--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,6 +4,12 @@
     "paths": {
       "@libs/*": [
         "src/libs/*"
+      ],
+      "@models/*": [
+        "src/models/*"
+      ],
+      "@services/*": [
+        "src/services/*"
       ]
     }
   }
