--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "aws-lambda": "^1.0.7",
     "dotenv": "^16.4.5",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "zod": "^3.23.8"
   },
