--- a/serverless.yml
+++ b/serverless.yml
@@ -20,19 +20,19 @@ provider:
     - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
 
 functions:
-  # createProduct:
-  #   handler: src/functions/create-product/handler.main
-  #   timeout: 10
-  #   events:
-  #     - http:
-  #         method: post
-  #         path: create-product
-  #         cors:
-  #           origin: "*"
-  #           headers:
-  #             - Content-Type
-  #             - Accept
-  #             - X-Amz-Date
+  createProduct:
+    handler: src/functions/create-product/handler.main
+    timeout: 10
+    events:
+      - http:
+          method: post
+          path: create-product
+          cors:
+            origin: "*"
+            headers:
+              - Content-Type
+              - Accept
+              - X-Amz-Date
   getProduct:
     handler: src/functions/get-product/handler.main
     timeout: 10
