--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 node_modules
 package-lock.json
 .esbuild
+.esbuild/.build/src/functions/create-product/handler.js
+.esbuild/.build/src/functions/create-product/handler.js
+.esbuild/.build/src/functions/get-product/handler.js
+.esbuild/.build/src/functions/get-product/handler.js.map
