--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ package-lock.json
 .esbuild/.build/src/functions/create-product/handler.js.map
 .esbuild/.build/src/functions/get-product/handler.js
 .esbuild/.build/src/functions/get-product/handler.js.map
+.esbuild/.build/src/functions/get-product/handler.js.map
+.esbuild/.build/src/functions/get-product/handler.js
+.esbuild/.build/src/functions/create-product/handler.js.map
+.esbuild/.build/src/functions/create-product/handler.js
